--- a/styles/style.css
+++ b/styles/style.css
@@ -1,49 +1,60 @@
-/* General css Property */
-
-
+/* General css Property (Header and Footer)*/
 body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
 }
-header {
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px;
-    background-color: hsl(10, 50%, 66%);
-}
 .autor{
+    margin: 0;
     display: flex;
     align-items: center;
+    justify-content: center;
+    padding: 20px;
+    background-color: hsl(10, 50%, 66%);
 }
 .profile-pic{
     width: 50px;
     height: 50px;
 }
-.hamburger{
-    display: none;
-}
 .name{
+    color: white;
     font-size: 24px;
     margin: 0px;
+    padding: 10px;
 }
-.nav{
-    width: 100%;
+.navbar {
     background-color: hsl(0, 0%, 20%);
-    gap: 20px;
-}
-.nav ul{
-    list-style-type: none;
+    overflow: hidden;
+    text-align: center;
+  }
+  .navbar-links {
     display: flex;
-    justify-content: space-evenly;
+    justify-content:space-around;
+    flex-direction: row;
 }
-.nav ul a{
+.navbar-links a {
     color: white;
+    padding: 15px 20px;
     text-decoration: none;
+    text-align: center;
+    display: block;
 }
-nav ul a:hover{
+.navbar-links a:hover {
     color: gold;
 }
+.hamburger {
+    display: none;
+    font-size: 28px;
+    color: black;
+    padding: 14px 20px;
+    cursor: pointer;
+  }
+.navbar-links {
+    display: flex;
+  }
+.navbar-links a {
+    padding: 14px 20px;
+  }
 footer{
     background-color: hsl(10, 100%, 88%);
     padding: 20px;
@@ -51,30 +62,41 @@ footer{
     color: black;
 }
 
-
-
 /* HomePage css property */
-.course-work{
-    background-color: hsl(0, 0%, 90%);
+
+#section {
+    display: flex;
+    justify-content: space-between;
+    align-items: stretch;
+    padding: 10px;
 }
-.course-work h2{
+.course-work{
+    display: flex;
+    flex-direction: column;
+    background-color: hsl(0, 0%, 90%);
+    flex-grow: 1;
+    margin-right: 20px;
+}
+.course-work h2, .place h2{
+    margin: 0px;
+    padding: 0px;
     color: white;
     background-color: hsl(0, 0%, 20%);
+    text-align: center;
 }
 .place{
     background-color: hsl(0, 0%, 90%);
-    justify-content: center;
-}
-.place h2{
-    color: white;
-    background-color: hsl(0, 0%, 20%);
+    display: flex;
+    flex-grow: 0.5;
+    flex-direction: column;
 }
 .place-img{
+    margin: 10px;
     width: 200px;
-    /* display: none;; */
+    align-self: center;
 }
 .place p{
-    justify-content: center;
+    text-align: center;
 }
 .certificate{
     background-color: hsl(0, 0%, 90%);
@@ -85,7 +107,6 @@ footer{
     color: white;
     background-color: hsl(0, 0%, 20%);
     text-align: center;
-
 }
 .certificate-options {
     color: white;
@@ -106,27 +127,23 @@ footer{
     cursor: pointer;
     font-size: 1em;
 }
-
-/* Course Detail Page css property */
 .completed {
     background-color: lightgreen;
 }
-
 .incomplete {
     background-color: lightcoral;
 }
-
 .course-card {
     padding: 10px;
     margin: 0px ;
     text-align: center;
-
+    border-radius: 10px;
 }
-
 .course-title {
     padding: 0px;
     margin: 0px;
     font-weight: bold;
+    text-align: center;
 }
 #courseList {
     display: grid;
@@ -143,14 +160,31 @@ footer{
 }
 
 @media (max-width: 480px) {
-    .hamburger{
+    .navbar-links {
+        display: none;
+        flex-direction: column;
+        width: 100%;
+        text-align: center;
+      }
+      .navbar-links.active {
+        display: flex;
+      }
+      .hamburger {
         display: inline;
+      }
+      #section {
+        display: grid;
+        grid-template-columns: 1fr; 
+        gap: 20px;
+    }
+    .course-work, .place {
+        margin-right: 0;
+        width: 100%; 
     }
     .course-card {
-        grid-template-columns: 1fr; /* 1 column on very small screens */
+        grid-template-columns: 1fr; 
     }
     #courseList {
-        grid-template-columns: 1fr; /* 1 column for small screens */
+        grid-template-columns: 1fr;
     }
-
 }
