--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 /* General css Property (Header and Footer)*/
 body {
-    font-family: Arial, sans-serif;
+    font-family: Roboto, sans-serif;
     margin: 0;
     padding: 0;
 }
@@ -34,13 +34,17 @@ body {
 }
 .navbar-links a {
     color: white;
-    padding: 15px 20px;
     text-decoration: none;
     text-align: center;
     display: block;
 }
 .navbar-links a:hover {
     color: gold;
+}
+.navbar-links li{
+    margin: 0px;
+    padding: 0px;
+    list-style-type: none;
 }
 .hamburger {
     display: none;
@@ -53,7 +57,7 @@ body {
     display: flex;
   }
 .navbar-links a {
-    padding: 14px 20px;
+    padding: 5px 10px;
   }
 footer{
     background-color: hsl(10, 100%, 88%);
@@ -76,6 +80,8 @@ footer{
     background-color: hsl(0, 0%, 90%);
     flex-grow: 1;
     margin-right: 20px;
+    border: 2px;
+    border-radius: 5px;
 }
 .course-work h2, .place h2{
     margin: 0px;
@@ -89,6 +95,7 @@ footer{
     display: flex;
     flex-grow: 0.5;
     flex-direction: column;
+    border-radius: 5px;
 }
 .place-img{
     margin: 10px;
@@ -98,6 +105,8 @@ footer{
 .place p{
     text-align: center;
 }
+
+/* Certificate */
 .certificate{
     background-color: hsl(0, 0%, 90%);
     margin: 0px;
@@ -147,15 +156,16 @@ footer{
 }
 #courseList {
     display: grid;
-    grid-template-columns: repeat(3, 1fr); /* 3 columns for large screens */
+    grid-template-columns: repeat(3, 1fr);
     gap: 20px;
     margin-top: 20px;
 }
 
 /* Responsive design for smaller screens */
+
 @media (max-width: 768px) {
     .course-card {
-        grid-template-columns: repeat(2, 1fr); /* 2 columns on smaller screens */
+        grid-template-columns: repeat(2, 1fr);
     }
 }
 
