--- a/styles/style.css
+++ b/styles/style.css
@@ -166,6 +166,9 @@ footer{
 }
 
 @media (max-width: 480px) {
+    .autor{
+        justify-content: space-between;
+    }
     .navbar-links {
         padding: 0px;
         margin: 0px auto;
