--- a/styles/style.css
+++ b/styles/style.css
@@ -17,7 +17,7 @@ body {
     height: 50px;
 }
 .name{
-    color: white;
+    color: black;
     font-size: 24px;
     margin: 0px;
     padding: 10px;
@@ -56,7 +56,7 @@ body {
     display: flex;
   }
 footer{
-    background-color: hsl(10, 100%, 88%);
+    background-color: hsl(10, 100%, 80%);
     padding: 20px;
     text-align: center;
     color: black;
@@ -73,7 +73,7 @@ footer{
 .course-work{
     display: flex;
     flex-direction: column;
-    background-color: hsl(0, 0%, 90%);
+    background-color: hsl(0, 0%, 85%);
     flex-grow: 1;
     margin-right: 20px;
     border: 2px;
@@ -126,7 +126,7 @@ footer{
     margin-right: 10px;
     padding-left: 30px;
     padding-right: 30px;
-    background-color: hsl(0, 0%, 20%);
+    background-color: hsl(0, 0%, 35%);
     color: white;
     border-radius: 5px;
     cursor: pointer;
