--- a/chamber/styles/style.css
+++ b/chamber/styles/style.css
@@ -77,7 +77,7 @@ h1 {
 
 /* Navbar */
 .navbar {
-    background-color: #444;
+    /* background-color: #444; */
     padding: 10px;
 }
 
@@ -158,6 +158,50 @@ h1 {
     flex-wrap: wrap;
     gap: 20px;
 }
+
+/* card */
+#cards {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
+}
+
+.card {
+    background-color: white;
+    border-radius: 8px;
+    padding: 20px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    max-width: 300px;
+    text-align: center;
+}
+
+.card img {
+    max-width: 100px;
+    margin-bottom: 15px;
+}
+
+.card h3 {
+    margin-bottom: 10px;
+    font-size: 1.2rem;
+}
+
+.card p {
+    margin: 5px 0;
+}
+
+.card a {
+    display: inline-block;
+    margin-top: 10px;
+    text-decoration: none;
+    color: #007BFF;
+    font-weight: bold;
+}
+
+.card a:hover {
+    text-decoration: underline;
+}
+
 
 /* Footer */
 footer {
