--- a/chamber/styles/style.css
+++ b/chamber/styles/style.css
@@ -1,3 +1,13 @@
+
+@font-face {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url('fonts/Roboto-Regular.woff2') format('woff2'), /* Adjust the paths as necessary */
+         url('fonts/Roboto-Regular.woff') format('woff');
+     }
+  
 /* Reset some default styles */
 * {
     margin: 0;
@@ -22,10 +32,12 @@ header {
     position: relative;
 }
 footer {
-    background-color: #333;
+    background-color: hsl(0, 0%, 10%);
     color: hsl(0, 0%, 100%);
     text-align: center;
     padding: 1rem;
+    min-height: 80px;
+    position: relative;
 }
 footer p {
     margin: 0.5rem 0;
@@ -50,7 +62,7 @@ footer p {
 .autor p {
     font-size: 0.9rem;
     margin-top: 0.2rem;
-    color: hsl(0, 0%, 80%);
+    color: hsl(0, 0%, 90%);
 }
 #hamburger {
     display: none;
@@ -83,11 +95,11 @@ footer p {
 }
 .navLinks li:hover{
     background-color: hsl(41, 88%, 57%);
-    color: hsl(0, 0%, 20%);
+    color: hsl(0, 0%, 0%);
 }
 .navLinks li.current-menu-item  {
     background-color: hsl(41, 88%, 57%);
-    color: hsl(0, 0%, 20%);
+    color: hsl(0, 0%, 0%);
 }
 
 
@@ -109,6 +121,7 @@ footer p {
 .maindirectory h2 {
     margin-bottom: 1rem;
     font-size: 1.5rem;
+    color: hsl(0, 0%, 0%);
     text-align: center;
     background-color: hsl(41, 88%, 57%);
     padding: 10px;
@@ -117,53 +130,27 @@ footer p {
 .maindirectory div {
     text-align: center;
     margin-top: 1rem;
+    font-size: 1.2rem;
+    font-weight: bold;
+    color: hsl(0, 0%, 0%);
+
+
 }
 .maindirectory button {
     margin: 0.5rem;
     font-size: 1.2rem;
     padding: 0.5rem;
     cursor: pointer;
-    background-color: hsl(0, 0%, 27%);
+    background-color: hsl(0, 0%, 20%);
     color: hsl(0, 0%, 100%);
     border: none;
     border-radius: 5px;
 }
 .maindirectory button:hover {
     background-color: hsl(41, 88%, 57%);
-    color: hsl(0, 0%, 20%);
+    color: hsl(0, 0%, 0%);
 }
-/* Grid view */
-.grid #cards {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 20px;
-    padding: 20px;
-}
-/* List view */
-.list #cards {
-    display: block;
-}
-.list #cards section {
-    display: flex;
-    flex-direction: row;
-    align-items: first baseline;
-    padding: 15px;
-    gap: 20px;
-    border: 1px solid hsl(0, 0%, 80%);
-    border-radius: 8px;
-    margin-bottom: 20px;
-    background-color: hsl(0, 0%, 95%);
-}
-.list #cards section img {
-    display: none;
-    max-width: 100px;
-    height: auto;
-    margin-right: 20px;
-}
-list #cards section h3 {
-    font-size: 1.25rem;
-    margin-bottom: 0.5rem;
-}
+
 
 
 
@@ -179,7 +166,7 @@ list #cards section h3 {
 #cards section {
     background-color: hsl(0, 0%, 95%);
     border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 8px hsla(0, 0%, 0%, 0.1);
     overflow: hidden;
     transition: transform 0.3s ease;
     padding: 20px;
@@ -203,37 +190,48 @@ list #cards section h3 {
 #cards section h3 {
     font-size: 1.5rem;
     margin-bottom: 10px;
-    color: hsl(0, 0%, 20%);
+    color: hsl(0, 0%, 0%);
 }
 #cards section div {
     font-size: 0.9rem;
-    color: hsl(0, 0%, 20%);
+    font-weight: bold;
+    color: hsl(0, 0%, 0%);
     line-height: 1.5;
+}
+/* Grid view */
+.grid #cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
+    padding: 20px;
+}
+/* List view */
+.list #cards {
+    display: block;
 }
 .list #cards section {
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
-    text-align: right;
+    align-items: first baseline;
+    text-align: start;
+    padding: 15px;
+    gap: 20px;
+    border: 1px solid hsl(0, 0%, 80%);
+    border-radius: 8px;
+    margin-bottom: 20px;
+    background-color: hsl(0, 0%, 95%);
 }
 .list #cards section img {
-    margin-right: 15px;
+    display: none;
+    max-width: 100px;
+    height: auto;
+    margin-right: 20px;
 }
-.list #cards section h3 {
+list #cards section h3 {
     font-size: 1.25rem;
-    margin-bottom: 0;
+    margin-bottom: 0.5rem;
+    text-align: start;
 }
-
-
-
-@font-face {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 400;
-    font-display: swap;
-    src: url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-  }
-  
 
 
 
@@ -243,7 +241,7 @@ list #cards section h3 {
         flex-direction: column;
         align-items: center;
     }
-    .navLinks {
+    .navLinks{
         max-height: 0;
         flex-direction: column;
         text-align: center;
@@ -266,7 +264,7 @@ list #cards section h3 {
     }
     .navLinks li.current-menu-item a {
         background-color: hsl(41, 88%, 57%);
-        color: hsl(0, 0%, 20%);
+        color: hsl(0, 0%, 0%);
     }
     #hamburger {
         display: block;
