--- a/chamber/styles/home.css
+++ b/chamber/styles/home.css
@@ -122,7 +122,8 @@
 /* #membership-container */
 #membership-container {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    /* grid-template-columns: repeat(3, 1fr); */
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 20px;
     padding: 20px;
     background-color: hsl(0, 0%, 100%);
@@ -151,9 +152,11 @@
 /* Flexbox for image and details */
 #membership-container .details-container {
     display: flex;
+    flex-direction: row;
     align-items: center;
     justify-content: space-between;
     text-align: left;
+    flex-wrap: wrap;
 }
 #membership-container img {
     border-radius: 10%;
@@ -221,8 +224,9 @@
         width: 100%;
     }
     #membership-container {
-        display: flex;
+        display: block;
         gap: 20px;
+        width: 100%;
     }
     #membership-container section {
         margin: 0;
