--- a/chamber/styles/join.css
+++ b/chamber/styles/join.css
@@ -9,6 +9,12 @@ main{
 #form-section{
     background-color: hsl(0, 0%, 95%);
 }
+
+#form-section, #member{
+  width: 48%; /* Adjust as necessary */
+  display: inline-block;
+  vertical-align: top;
+}
 #form-section h1{
     background-color: hsl(41, 88%, 57%);
     color: hsl(0, 0%, 0%);
@@ -77,7 +83,7 @@ form {
   #member{
     background-color: hsl(0, 0%, 95%);
   }
-  #member-card{
+  /* #member-card{
     padding: 10px;
     align-items: center;
     justify-content: center;
@@ -94,4 +100,37 @@ form {
   #member-card h3{
     color: hsl(0, 0%, 100%);
   }
+ */
 
+
+ #member-card {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr); /* 2 cards per row */
+  gap: 20px;
+}
+
+.card {
+  display: inline-block;
+  border: 1px solid #ccc;
+  padding: 20px;
+  text-align: center;
+  border-radius: 8px;
+}
+
+button {
+  padding: 10px 20px;
+  background-color: #007BFF;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+dialog {
+  padding: 20px;
+  border: none;
+}
+
+#mydialog button {
+  float: right;
+}
