--- a/chamber/styles/join.css
+++ b/chamber/styles/join.css
@@ -7,16 +7,18 @@ main{
     margin: 10px;
 }
 #form-section{
-    background-color: hsl(0, 0%, 95%);
+    background-color: hsl(0, 0%, 100%);
 }
 
 #form-section, #member{
-  width: 48%; /* Adjust as necessary */
+  width: 48%;
   display: inline-block;
   vertical-align: top;
+  margin: 10px;
 }
 #form-section h1{
-    background-color: hsl(41, 88%, 57%);
+    font-size: 1.5rem;
+    text-align: start;
     color: hsl(0, 0%, 0%);
 }
 form {
@@ -29,11 +31,11 @@ form {
     }
  
     h3 {
-      font-size: .9rem;
+      font-size: 1.5rem;
       color: hsl(0, 0%, 0%);
-      background-color: hsl(41, 88%, 57%);
       margin: 1.5rem 0 .2rem 0;
       border-bottom: 1px solid #eee;
+      text-align: center;
     }
   
     input[type=text],
@@ -50,7 +52,7 @@ form {
       border-left-color:#555;
       font-size: 1rem;
       color: #3D405B;
-      width: 250px;
+      width: 300px;
     }
   
     input:required {border-left-color: #d70000;}
@@ -60,8 +62,8 @@ form {
     input[type=submit] {
       border: none;
       text-align: center;
-      background-color: hsl(0, 0%, 100%);
-      color: hsl(41, 88%, 50%);
+      background-color: hsl(41, 88%, 57%);
+      color: hsl(0, 0%, 0%);
       border-radius: 1rem;
       padding: .75rem 1.5rem;
       margin: 2rem 0;
@@ -81,56 +83,53 @@ form {
     border-radius: 6px;
   }
   #member{
-    background-color: hsl(0, 0%, 95%);
-  }
-  /* #member-card{
-    padding: 10px;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    background-color: hsl(41, 88%, 50%);
-  }
-  #member-card a{
-    padding: 5px;
     background-color: hsl(0, 0%, 100%);
+  }
+  #member-title{
+    text-align: start;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    padding: 10px;
     color: hsl(0, 0%, 0%);
-    border-radius: 10px;
-    text-decoration: none;
   }
-  #member-card h3{
-    color: hsl(0, 0%, 100%);
-  }
- */
-
-
  #member-card {
   display: grid;
-  grid-template-columns: repeat(2, 1fr); /* 2 cards per row */
+  margin-right: 20px;
   gap: 20px;
+  background-color: hsl(0, 0%, 100%);
 }
 
 .card {
   display: inline-block;
-  border: 1px solid #ccc;
+  background-color: hsl(41, 88%, 57%);
+  color: hsl(0, 0%, 0%);
+  border: 1px solid hsl(0, 0%, 0%);
   padding: 20px;
   text-align: center;
-  border-radius: 8px;
+  border-radius: 20px 0px 20px 0px;
 }
 
 button {
   padding: 10px 20px;
-  background-color: #007BFF;
+  background-color: hsl(0, 0%, 0%);
   color: white;
   border: none;
-  border-radius: 5px;
+  border-radius: 10px;
   cursor: pointer;
 }
-
 dialog {
   padding: 20px;
   border: none;
 }
-
 #mydialog button {
   float: right;
+}
+
+
+
+@media screen and (max-width: 768px) {
+  #form-section, #member{
+    width: 100%;
+    display: grid;
+  }
 }
