--- a/chamber/styles/join.css
+++ b/chamber/styles/join.css
@@ -11,15 +11,26 @@ main{
 }
 
 #form-section, #member{
-  width: 48%;
+  width: 60%;
   display: inline-block;
   vertical-align: top;
   margin: 10px;
+  border: hsl(0, 0%, 0%);
+  border-style: dotted;
+}
+#member{
+  width: 30%;
+  display: inline-block;
+  vertical-align: top;
+  margin: 10px;
+  border: hsl(0, 0%, 0%);
+  border-style: dotted;
 }
 #form-section h1{
     font-size: 1.5rem;
     text-align: start;
     color: hsl(0, 0%, 0%);
+    margin-left: 10px;
 }
 form {
     margin: 1rem 2%;
@@ -35,7 +46,7 @@ form {
       color: hsl(0, 0%, 0%);
       margin: 1.5rem 0 .2rem 0;
       border-bottom: 1px solid #eee;
-      text-align: center;
+      text-align: start;
     }
   
     input[type=text],
@@ -50,9 +61,13 @@ form {
       border-radius: 4px;
       border-left-width: 5px;
       border-left-color:#555;
-      font-size: 1rem;
+      font-size: 1.5rem;
       color: #3D405B;
-      width: 300px;
+      width: 100%;
+    }
+    textarea{
+      width: 100%;
+      height: 100px;
     }
   
     input:required {border-left-color: #d70000;}
@@ -76,7 +91,12 @@ form {
   input:-webkit-autofill{
     -webkit-text-fill-color: hsl(0, 0%, 0%);
   }
-  #results {
+  .submit{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+#results {
     background-color: #F4F1DE;
     padding: 0 1rem;
     border: 1px solid #E07A5F;
@@ -94,25 +114,35 @@ form {
   }
  #member-card {
   display: grid;
-  margin-right: 20px;
+  margin: 10px;
   gap: 20px;
   background-color: hsl(0, 0%, 100%);
+  animation: 1s ease-out 0s 1 slideInFromRight;
 }
+@keyframes slideInFromRight {
+  0% {
+    transform: translateX(300%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
 
 .card {
   display: inline-block;
-  background-color: hsl(41, 88%, 57%);
+  background-color: hsl(0, 0%, 90%);
   color: hsl(0, 0%, 0%);
   border: 1px solid hsl(0, 0%, 0%);
   padding: 20px;
   text-align: center;
   border-radius: 20px 0px 20px 0px;
+  
 }
-
 button {
   padding: 10px 20px;
-  background-color: hsl(0, 0%, 0%);
-  color: white;
+  background-color: hsl(41, 88%, 57%);
+  color: hsl(0, 0%, 0%);
   border: none;
   border-radius: 10px;
   cursor: pointer;
@@ -124,9 +154,6 @@ dialog {
 #mydialog button {
   float: right;
 }
-
-
-
 @media screen and (max-width: 768px) {
   #form-section, #member{
     width: 100%;
