--- a/chamber/styles/style.css
+++ b/chamber/styles/style.css
@@ -6,7 +6,6 @@
     src: url('fonts/Roboto-Regular.woff2') format('woff2'),
          url('fonts/Roboto-Regular.woff') format('woff');
 }
-
   
 /* Reset some default styles */
 * {
@@ -263,6 +262,64 @@ footer {
 
 
 
+
+
+/* Discover page */
+#discover-main{
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+}
+#sidebar{
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    justify-content:space-between
+}
+#nationality, #city, #calender{
+    width: 100%;
+    height: auto;
+    margin: 10px;
+    background-color: hsl(0, 0%, 95%);
+}
+#nationality h3{
+    padding: 10px;
+}
+#nationality ul{
+    padding-left: 30px;
+}
+
+#city{
+    display: flex;
+    flex-direction: column;
+}
+#city img{
+    padding: 10px;
+    align-items: center;
+    border-radius: 20px;
+}
+#city h3{
+    text-align: center;
+}
+#city p{
+    padding: 10px;
+}
+#nationality h2, #city h2, #calender h2{
+    background-color: hsl(41, 88%, 57%);
+    text-align: center;
+}
+#about-pic{
+    width: 70%;
+    padding-left: 20px;
+}
+#about-pic img{
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    border-radius: 20px;
+}
+
+
 /* Responsive Design */
 @media (max-width: 768px) {
     .autor {
@@ -322,4 +379,17 @@ footer {
     .address, .social-media, .developer{
         padding: 10px;
     }
+    #discover-main{
+        flex-direction: column;
+    }
+    #sidebar, #about-pic {
+        width: 100%;
+        padding: 0; 
+      }
+      #about-pic {
+        padding-top: 20px;
+      }
+      #sidebar {
+        margin-bottom: 20px;
+      }
 }
