--- a/chamber/styles/style.css
+++ b/chamber/styles/style.css
@@ -274,13 +274,15 @@ footer {
     width: 30%;
     display: flex;
     flex-direction: column;
-    justify-content:space-between
 }
-#nationality, #city, #calender{
+#event, #nationality, #city{
     width: 100%;
-    height: auto;
     margin: 10px;
     background-color: hsl(0, 0%, 95%);
+}
+#event p{
+    text-align: center;
+    padding: 10px;
 }
 #nationality h3{
     padding: 10px;
@@ -304,19 +306,29 @@ footer {
 #city p{
     padding: 10px;
 }
-#nationality h2, #city h2, #calender h2{
+#event h2, #nationality h2, #city h2{
     background-color: hsl(41, 88%, 57%);
     text-align: center;
 }
-#about-pic{
+#discover-site{
     width: 70%;
     padding-left: 20px;
 }
-#about-pic img{
+#discover-site img{
     width: 100%;
     justify-content: center;
     align-items: center;
     border-radius: 20px;
+}
+#discover-site h2{
+    text-align: center;
+}
+.site-container{
+    margin-bottom: 20px;
+    border-radius: 10px;
+    background-color: hsl(0, 0%, 95%);
+    /* border: 1px solid; */
+    padding: 20px;
 }
 
 
