--- a/project/styles/produts.css
+++ b/project/styles/produts.css
@@ -1,40 +1,54 @@
+#product-title{
+    background-color: hsl(122, 65%, 30%);
+    color: hsl(0, 0%, 100%);
+    border-radius: 10px;
+    text-align: center;
+    margin: 0 10px 20px;
+}
 .feature {
     text-align: center;
     margin: 2rem 0;
     font-size: 2rem;
 }
-
 .container {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 2rem;
     justify-content: center;
     padding: 0 2rem;
 }
-
 .product {
     background-color: white;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     overflow: hidden;
     text-align: center;
-    width: calc(25% - 2rem);
     margin-bottom: 2rem;
 }
-
 .product img {
     width: 100%;
     height: 200px;
     object-fit: cover;
 }
-
 .product h2 {
     font-size: 1.25rem;
     margin: 1rem 0;
 }
-
 .product .price {
     font-size: 1.5rem;
-    color: #4CAF50;
+    color: hsl(122, 39%, 49%);
     margin-bottom: 1rem;
+}
+
+
+
+/* Responsive Styles */
+@media (max-width: 768px) {
+    .container {
+        flex-direction: column;
+        padding: 0 1rem;
+    }
+    .product {
+        width: 100%;
+    }
 }
