--- a/project/styles/home.css
+++ b/project/styles/home.css
@@ -1,13 +1,13 @@
 
  
 
-:root {
+/* :root {
     --primary-color: hsl(122, 65%, 30%);
     --secondary-color: hsl(0, 0%, 3%);
     --light-color: hsl(0, 0%, 100%);
     --ONE: hsl(122, 66%, 85%);
     --five: hsl(122, 65%, 65%);
-  }
+  } */
 
 
 /* Hero section styles */
@@ -40,6 +40,7 @@
     display: inline-block;
     padding: 15px 30px;
     background-color: hsl(122, 65%, 30%);
+    font-weight: bold;
     color: hsl(0, 0%, 100%);
     text-decoration: none;
     font-size: 18px;
@@ -57,7 +58,6 @@
     margin: 2rem 0;
     font-size: 2rem;
 }
-
 .container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -65,7 +65,6 @@
     justify-content: center;
     padding: 0 2rem;
 }
-
 .product {
     background-color: white;
     border-radius: 10px;
@@ -74,21 +73,18 @@
     text-align: center;
     margin-bottom: 2rem;
 }
-
 .product img {
     width: 100%;
     height: 200px;
     object-fit: cover;
 }
-
 .product h2 {
     font-size: 1.25rem;
     margin: 1rem 0;
 }
-
 .product .price {
     font-size: 1.5rem;
-    color: #4CAF50;
+    color: hsl(0, 0%, 0%);
     margin-bottom: 1rem;
 }
 
