--- a/project/styles/style.css
+++ b/project/styles/style.css
@@ -9,13 +9,11 @@ body {
     font-family: Roboto, sans-serif;
     line-height: 1.6;
     background-color: hsl(0, 0%, 100%);
-    color: hsl(0, 0%, 20%);
     padding: 0;
     margin: 0;
 }
 header {
     background-color: hsl(122, 65%, 30%);
-    color: hsl(0, 0%, 3%);
     padding: 1rem 0;
     display: flex;
     justify-content: space-between;
@@ -36,13 +34,14 @@ header {
     margin-right: 10px;
 }
 .autor h1 {
-    font-size: 1.8rem;
+    font-size: 2.5rem;
     margin: 0 0.5rem;
     color: hsl(0, 0%, 100%);
 
 }
 .autor p {
-    font-size: 0.9rem;
+    font-size: 1.5rem;
+    font-weight: bold;
     margin-top: 0.2rem;
     color: hsl(0, 0%, 100%);
 }
@@ -68,6 +67,8 @@ header {
 .navLinks a {
     text-decoration: none;
     color: hsl(0, 0%, 0%);
+    font-weight: bold;
+    font-size: 1rem;
     padding: 0.5rem 1rem;
     border-radius: 10px;
     display: block;
@@ -88,13 +89,11 @@ header {
 footer {
     background-color: hsl(122, 65%, 65%);
     padding: 20px;
-    margin: 10px;
     color: hsl(0, 0%, 0%);
 }
 .footer-container {
     display: flex;
     flex: 1;
-    margin: 0 20px;
     grid-template-columns: 1fr;
     justify-content: space-between;
     align-items: flex-start;
@@ -129,6 +128,12 @@ footer {
     .autor {
         flex-direction: column;
         align-items: center;
+    }
+    .autor h1 {
+        font-size: 2rem;
+    }
+    .autor p {
+        font-size: 1.25rem;
     }
     .navLinks{
         max-height: 0;
