--- a/project/styles/form.css
+++ b/project/styles/form.css
@@ -67,6 +67,9 @@
 
   /* Review page */
   #review-content{
+    margin-left: 20px;
+    margin-right: 20px;
+
     margin-bottom: 20px;
     gap: 20px;
   }
@@ -76,9 +79,12 @@
     text-align: center;
   }
   .review-details{
-    border: dotted;
-    text-align: center;
+    padding: 10px;
+    background-color: hsl(0, 0%, 90%);
+    border-radius: 10px;
   }
+  
+  
 
   @media screen and (max-width: 768px){
     .form {
